--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="rockpaperscissors.js"></script>
+    <h1>pee pee poo poo</h1>
+    <script src="rps.js"></script>
 </body>
 </html>
